--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: scala
-dist: trusty
+scala:
+  - 2.12.9
 jdk:
   - oraclejdk8
-
-matrix:
-  include:
-    - scala: 2.12.9
-      env:
-        - SBT_VERSION=1.3.4
+before_install:
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
+    scripts/decrypt-keys.sh; fi
+install:
+  - rvm use 2.6.5 --install --fuzzy
+  - gem install jekyll -v 4
+script:
+  - sbt ++$TRAVIS_SCALA_VERSION test scripted
+after_success:
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
+    scripts/publishMicrosite.sh; fi
+  - if [ "$TRAVIS_PULL_REQUEST" = "true" ]; then echo "Not in master branch, skipping
+    deploy and release"; fi
