--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - rvm use 2.6.5 --install --fuzzy
   - gem install jekyll -v 4
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION test scripted
+  - sbt ++$TRAVIS_SCALA_VERSION test
 after_success:
   - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
     scripts/publishMicrosite.sh; fi
