--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,39 @@
-language: scala
-scala:
-  - 2.12.9
+  language: scala
+dist: trusty
 jdk:
-  - oraclejdk9
+  - oraclejdk8
+
+matrix:
+  include:
+    - scala: 2.12.9
+      env:
+        - SBT_VERSION=1.3.4
+
 before_install:
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
-    scripts/decrypt-keys.sh; fi
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      openssl aes-256-cbc -K $encrypted_40bed682e53c_key -iv $encrypted_40bed682e53c_iv -in travis-deploy-key.enc -out travis-deploy-key -d;
+    fi
+
 install:
   - rvm use 2.6.5 --install --fuzzy
   - gem install jekyll -v 4
+
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION test
+  - sbt ++$TRAVIS_SCALA_VERSION ^^$SBT_VERSION clean compile test
+
 after_success:
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
-    scripts/publishMicrosite.sh; fi
-  - if [ "$TRAVIS_PULL_REQUEST" = "true" ]; then echo "Not in master branch, skipping
-    deploy and release"; fi
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      if grep -q "SNAPSHOT" version.sbt; then
+        sbt ^^$SBT_VERSION publish;
+      else
+        if [ "$SBT_VERSION" = "1.3.4" ]; then
+          sbt ^^$SBT_VERSION orgUpdateDocFiles;
+          git reset --hard HEAD;
+          git clean -f;
+          git checkout master;
+          git pull origin master;
+          sbt ^^$SBT_VERSION release;
+          sbt ^^$SBT_VERSION docs/publishMicrosite;
+        fi
+      fi
+    fi
