--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: scala
 dd:
 - openssl aes-256-cbc -K $encrypted_40bed682e53c_key -iv $encrypted_40bed682e53c_iv
   -in travis-deploy-key.enc -out travis-deploy-key -d
+
+install:
+- rvm use 2.6.5 --install --fuzzy
+- gem install jekyll -v 4
+
+after_success:
+- if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
+  scripts/publishMicrosite.sh; fi
