--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: scala
-dd:
+before_install:
 - openssl aes-256-cbc -K $encrypted_40bed682e53c_key -iv $encrypted_40bed682e53c_iv
   -in travis-deploy-key.enc -out travis-deploy-key -d
 
