--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: scala
 install:
 - rvm use 2.6.5 --install --fuzzy
 - gem install jekyll -v 4
+- gem install jekyll-graphviz
 
 after_success:
 - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
